Updating readme file.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is very very very very very very mockup.
 
-It does not even close work yet.
+IT IS NOT EVEN CLOSE TO WORK YET! So please, do not fork or nothing yet. Heavy changes are coming.
 
 At the moment I'm just testing out and doing mockups, testing the protocol, etc.
