Testing a bit more GIT and remembering how it worked. Creating some dummy changes.

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This is very very very very very very mockup.
 
-IT IS NOT EVEN CLOSE TO WORK YET! So please, do not fork or nothing yet. Heavy changes are coming.
+IT IS NOT EVEN CLOSE TO WORK YET! So please, do not fork or pay much attention to this yet. Heavy changes are coming!
 
 At the moment I'm just testing out and doing mockups, testing the protocol, etc.
+
