--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-This is very very very very very very mockup.
+THE master branch IS VERY SOON GOING TO BE CLEANED UP.
 
-IT IS NOT EVEN CLOSE TO WORK YET! So please, do not fork or pay much attention to this yet. Heavy changes are coming!
+New version is soon going to pushed which will have a much cleaner skeleton + plus documentation about the skeleton of the code and how functional tests can be done.
 
-At the moment I'm just testing out and doing mockups, testing the protocol, etc.
+The goal is that it'll be much easier for others to collaborate (and teach me Java). 
+
+Almost all the bc functionalities will be missing and the rest will have bugs, so don't expect to run it yet as a main bc channel server.
 
