Updating current status. Work in progress.

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 Work in progress.
 
-Currently committing basic code and writing simple how to's.
+DOES NOT WORK VERY WELL YET! WATCH OUT! Test suppose to run true 
 
-Trying to get this to compile first :-)
+Currently committing basic code and writing simple how-to's and instructions.
+
+And trying to get this to compile first :-)
 
 Stay tuned!
