Updating current status. Work in progress.

--- a/README
+++ b/README
@@ -1,9 +1,8 @@
-Work in progress.
+...Work in progress...
 
-DOES NOT WORK VERY WELL YET! WATCH OUT! Test suppose to run true 
+WATCH OUT! DOES NOT WORK VERY WELL YET! Don't use if you are not a dev. 
 
-Currently committing basic code and writing simple how-to's and instructions.
+/* Currently committing basic code and writing simple how-to's and instructions. */
 
-And trying to get this to compile first :-)
 
 Stay tuned!
